@@ -1,0 +1,8 @@
+CORE
+past-instrumentation1.sv
+--bound 10 --aig
+^\[.*\] always main\.counter >= 1 -> \$past\(main\.counter, 1\) == main\.counter - 1: PROVED up to bound 10$
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
