@@ -1,0 +1,8 @@
+CORE
+past-instrumentation3.sv
+--bdd
+\[.*\] always main\.counter >= 2 -> \$past\(main\.counter, 2\) == main\.counter - 2: PROVED$
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
