@@ -15,6 +15,7 @@ SRC = \
       ebmc_parse_options.cpp \
       ebmc_properties.cpp \
       ebmc_solver_factory.cpp \
+      instrument_past.cpp \
       k_induction.cpp \
       liveness_to_safety.cpp \
       live_signal.cpp \
