@@ -1,6 +1,7 @@
 # EBMC 5.5
 
 * Verilog: fix for primitive gates with more than two inputs
+* Verilog: Support $past when using AIG-based engines
 
 # EBMC 5.4
 
